# daikin-home-ac

./: .clang-format  .gitignore  CMakeLists.txt  README.md  deploy.nu  go.mod  main.go
cmake/: drogon.cmake
cmd/server/: main.go
internal/server/: daikin.go  db.go  http.go
server/: daikin.go  db.go  http.go
src/: main.cpp
src/controller/: temperature-controller.cpp  temperature-controller.hpp
ui/: .gitignore  deploy.nu  package.json  svelte.config.js  tailwind.config.js
ui/src/: app.postcss
ui/src/routes/: +layout.svelte  +page.svelte
ui/src/routes/temperature/: +page.server.js  +page.svelte
ui/src/routes/timer/: +page.svelte
